--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install Python dependencies
         run: pip install -r requirements.txt
       - name: Run lint check
-        run:
+        run: |
           chmod +x tests/lint.sh
           ./tests/lint.sh
       - name: Set up Docker Buildx
