--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,26 +10,49 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
+
       - name: Install Python dependencies
         run: pip install -r requirements.txt
+
       - name: Run lint check
         run: |
           chmod +x tests/lint.sh
           ./tests/lint.sh
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - name: Build Docker image
-        run: docker build -t my-server:latest .
+
+      - name: Build Docker image and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/simple-server:latest
+
       - name: Run Docker container
-        run: docker run -d -p 8080:8080 --name my-server-container my-server:latest
+        run: docker run -d -p 8080:8080 --name my-server-container ${{ secrets.DOCKERHUB_USERNAME }}/simple-server:latest
+
       - name: Run health check
         run: |
           chmod +x tests/health_check.sh
           ./tests/health_check.sh
+
+      - name: Login to Docker Hub
+        if: success()
+        uses: docker/login-actions@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Push to Docker Hub
+        if: success()
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/simple-server:latest
+
       - name: Show container logs
         if: always()
         run: docker logs my-server-container
